2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* panel-per-panel-config.schemas: Complete the schema for 
	large size. Just waiting for some usability input now ;)

2001-12-30  Glynn Foster  <glynn.foster@sun.com>

	* panel-gconf.c, session.c: 

	1:30am + 6 hours of tv = mushed (brain). Think I've got all
	the panels saving and loading properly now. They even do 
	session management, but I'm too scared to run gnome-session-2 to
	check if that actually works.

Fri Dec 28 03:00:03 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: correctly handle icon changing

	* menu.c: Fix some ugliness around the applets menu, still
	  much ugliness prevails

	* session.c: fix a few leaks.  When we find no panels install
	  a menu panel and tell the user.  Else the user would have no
	  interface to fix his configuration.

Wed Dec 26 17:45:49 2001  George Lebl <jirka@5z.com>

	* gnome-panel-screenshot.c, menu.c, panel.c, panel-util.c,
	  panel-widget.c:  I'm a dubmass!  GdkCursor is NOT a GObject

	* foobar-widget.c:  a bit of cleanup

Wed Dec 26 16:25:50 2001  George Lebl <jirka@5z.com>

	* Makefile.am, basep-widget.c, button-widget.c, foobar-widget.c,
	  global-keys.c, gnome-panel-properties.c, gnome-panel-screenshot.c,
	  gnome-run.c, launcher.c, main.c, menu.c, nothing.cP, panel-util.c,
	  panel-widget.c, panel.c, rgb-stuff.c, xstuff.c:  Compile also
	  with GDK_DISABLE_DEPRECATED and GDK_PIXBUF_DISABLE_DEPRECATED,
	  and all except gnome-run.c with GTK_DISABLE_DEPRECATED

	* foobar-widget.c: always convert to utf8 after getting something
	  from strftime

Wed Dec 26 14:01:24 2001  George Lebl <jirka@5z.com>

	* foobar-widget.c: fix width of clock label.  Now if the time
	  'grows' beyond initial size then the label grows as well (it never
	  shrinks horizontally though, unless you change the format)

	* nothing.cP: we need pause

Wed Dec 26 12:03:37 2001  George Lebl <jirka@5z.com>

	* panel-gconf.c: fix default return for get_string
