@@ -1,3 +1,11 @@
+2001-12-31  Glynn Foster  <glynn.foster@sun.com>
+
+	* panel-gconf.c, panel-gconf.h, session.c: 
+
+	All because the lady likes new API. Implemented / copied code for
+	a recursive unset of a gconf directory. Nothing uses it yet, but 
+	it soon will.
+	
 2001-12-30  Glynn Foster  <glynn.foster@sun.com>
 
 	* panel-per-panel-config.schemas: Complete the schema for 
